# josh

./: PredictiveMaintenanceTestData.xlsx  README.md  notebook.ipynb  pyproject.toml
