[project]
name = "realta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feature-engine>=1.9.3",
    "imblearn>=0.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sdv>=1.29.1",
    "seaborn>=0.13.2",
    "smote>=0.1",
    "xgboost>=3.1.1",
]
